--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "toys-store-bc-template",
-  "version": "1.0.0-beta.1",
+  "version": "0.0.0",
   "description": "",
   "main": "",
   "scripts": {
