--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,9 @@
 sonar.projectKey=pervasive-cats_toys-store-bc-template
 sonar.organization=pervasive-cats
-
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=toys-store-bc-template
-#sonar.projectVersion=1.0.0-beta.1
-
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
-
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.projectName=toys-store-bc-template
+sonar.projectVersion=0.0.0
+sonar.scala.version=3.2
+sonar.scala.coverage.reportPaths=target/scala-3.2.1/scoverage-report/scoverage.xml
+sonar.sources=src/main/scala
+sonar.tests=src/test/scala
+sonar.sourceEncoding=UTF-8
