ci: fix ci steps after debug

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -1,6 +1,6 @@
 branches:
-  - 'main'
-  - { name: 'beta', prerelease: true, channel: beta }
+  - main
+  - { name: beta, prerelease: true, channel: beta }
 plugins:
   - - '@semantic-release/commit-analyzer'
     - preset: conventionalcommits
@@ -10,8 +10,8 @@ plugins:
     - replacements:
         - files:
             - build.sbt
-          from: 'version := .*'
-          to: 'version := "${nextRelease.version}",'
+          from: version := .*
+          to: version := "${nextRelease.version}",
           results:
             - file: build.sbt
               hasChanged: true
@@ -19,47 +19,61 @@ plugins:
               numReplacements: 1
           countMatches: true
         - files:
-            - README.md
-          from: 'io/.*/io'
-          to: 'io/${nextRelease.version}/io'
-          results:
-            - file: README.md
-              hasChanged: true
-              numMatches: 1
-              numReplacements: 1
-          countMatches: true
-        - files:
             - package.json
-          from: '"version": ".*"'
+          from: '\"version\": \".*\"'
           to: '"version": "${nextRelease.version}"'
           results:
             - file: package.json
               hasChanged: true
               numMatches: 1
               numReplacements: 1
+          countMatches: true
+        - files:
+            - package-lock.json
+          from: '\"name\": \"toys-store-bc-template\",\n  \"version\": \".*\"'
+          to: "\"name\": \"toys-store-bc-template\",\n  \"version\": \"${nextRelease.version}\""
+          results:
+            - file: package-lock.json
+              hasChanged: true
+              numMatches: 1
+              numReplacements: 1
+          countMatches: true
+        - files:
+            - package-lock.json
+          from: '\"name\": \"toys-store-bc-template\",\n      \"version\": \".*\"'
+          to: "\"name\": \"toys-store-bc-template\",\n      \"version\": \"${nextRelease.version}\""
+          results:
+            - file: package-lock.json
+              hasChanged: true
+              numMatches: 1
+              numReplacements: 1
+          countMatches: true
         - files:
             - sonar-project.properties
-          from: 'sonar.projectVersion=.*'
-          to: 'sonar.projectVersion=${nextRelease.version}'
+          from: sonar.projectVersion=.*
+          to: sonar.projectVersion=${nextRelease.version}
           results:
             - file: sonar-project.properties
               hasChanged: true
               numMatches: 1
               numReplacements: 1
+          countMatches: true
   - - '@semantic-release/exec'
     - publishCmd: |
         sbt assembly;
-        if [[ ${nextRelease.channel} == beta ]]; then
-          echo "prerelease=1\n" >> $GITHUB_OUTPUT;
-        else 
-          echo "prerelease=0\n" >> $GITHUB_OUTPUT;
+        if [[ "${nextRelease.channel}" == "beta" ]]; then
+          echo "release=0" >> $GITHUB_OUTPUT;
+        else
+          echo "release=1" >> $GITHUB_OUTPUT;
         fi
+      shell: /bin/bash
   - - '@semantic-release/git'
     - assets:
         - build.sbt
         - README.md
         - CHANGELOG.md
         - package.json
+        - package-lock.json
         - sonar-project.properties
   - - '@semantic-release/github'
     - assets:
