--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,14 +20,10 @@ on:
 
 jobs:
   release:
-    name: Release on Maven Central and GitHub
+    name: Release on GitHub
     runs-on: ubuntu-20.04
     env:
       TERM: dumb
-    permissions:
-      contents: write
-      issues: write
-      pull-requests: write
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -59,20 +55,21 @@ jobs:
           node-version: "lts/*"
       - name: Install dependencies
         run: npm install
-      - name: Publish plugin
+      - name: Publish on GitHub
         id: publish
         run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GIT_CREDENTIALS: ${{ secrets.GIT_CREDENTIALS }}
           GIT_AUTHOR_NAME: ${{ steps.import-gpg.outputs.name }}
           GIT_AUTHOR_EMAIL: ${{ steps.import-gpg.outputs.email }}
           GIT_COMMITTER_NAME: ${{ steps.import-gpg.outputs.name }}
           GIT_COMMITTER_EMAIL: ${{ steps.import-gpg.outputs.email }}
       - name: Generate scaladoc
-        if: steps.publish.outputs.prerelease == 0
+        if: steps.publish.outputs.release == 1
         run: sbt doc
-      - name: Publish on GitHub Pages
-        if: steps.publish.outputs.prerelease == 0
+      - name: Publish scaladoc on GitHub Pages
+        if: steps.publish.outputs.release == 1
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: target/scala-3.2.1/api
