--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,4 +41,13 @@ jobs:
       - name: Check with scalafix
         run: sbt 'scalafixAll --check'
       - name: Test
-        run: sbt test
+        run: sbt clean test coverageReport
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          directory: target/scala-3.2.1/scoverage-report
+          fail_ci_if_error: true
+          flags: unittests
+          name: codecov-umbrella
+          verbose: true
