--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -33,10 +33,10 @@ jobs:
           key: ${{ runner.os }}-sbt-${{ hashfiles('**/build.sbt') }}
       - name: Generate coverage report
         run: sbt clean test coverageReport
-      - name: Replace all working directory paths with sources path
-        run: sed -i -e s,`pwd`,/github/workspace,g target/scala-3.2.1/scoverage-report/scoverage.xml
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v1.8
+      - name: SonarCloud scan fixed
+        uses: pervasive-cats/sonarcloud-scoverage-fix@v1.0.0
+        with:
+          scoverageReport: target/scala-3.2.1/scoverage-report/scoverage.xml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
