--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -20,19 +20,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Setup scala environment
-        uses: olafurpg/setup-scala@v13
+      - name: Download coverage data from GitHub
+        uses: actions/download-artifact@v3.0.1
         with:
-          java-version: openjdk@1.17
-      - name: Cache sbt
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.sbt
-            ~/.coursier
-          key: ${{ runner.os }}-sbt-${{ hashfiles('**/build.sbt') }}
-      - name: Generate coverage report
-        run: sbt clean test coverageReport
+          name: coverage
+          path: target/scala-3.2.1/scoverage-report
       - name: SonarCloud scan fixed
         uses: pervasive-cats/sonarcloud-scoverage-fix@v1.0.0
         with:
