--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,3 +51,9 @@ jobs:
           flags: unittests
           name: codecov-umbrella
           verbose: true
+      - name: Upload coverage to GitHub
+        uses: actions/upload-artifact@v3.1.1
+        with:
+          name: coverage
+          path: target/scala-3.2.1/scoverage-report/scoverage.xml
+          if-no-files-found: error
